fix spacing for container

--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -84,7 +84,7 @@
 }
 .second_section{
 	background: url('/assets/noise.png') repeat;
-	height: 3650px;
+	height: 3850px;
 }
 .marketing_header {
 	background: none repeat scroll 0 0 rgba(255, 255, 255, .7);
